<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9bcf9f"
    tools:context=".ui.employeeHome.EmployeeHomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardCardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="263dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="#9bcf9f"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="697dp">

                <EditText
                    android:id="@+id/jobDescField"
                    android:layout_width="347dp"
                    android:layout_height="49dp"
                    android:layout_marginHorizontal="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:ems="10"
                    android:hint="Description"
                    android:inputType="textMultiLine"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobTitleField" />

                <EditText
                    android:id="@+id/jobTitleField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12sp"
                    android:layout_marginVertical="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Title"
                    android:inputType="text"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/jobSalaryField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:ems="10"
                    android:hint="Salary range"
                    android:inputType="number"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobTypeSpinner" />

                <Spinner
                    android:id="@+id/jobTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="12sp"
                    android:layout_marginVertical="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="112dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobDescField" />

                <EditText
                    android:id="@+id/jobDurationField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:ems="10"
                    android:hint="Duration (hours)"
                    android:inputType="number"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobSalaryField" />

                <Button
                    android:id="@+id/jobDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="#009688"
                    android:text="Select Date"
                    android:textColor="@color/black"
                    android:textColorHighlight="#009688"
                    android:textColorLink="#009688"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#e4e278"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobDurationField" />

                <Button
                    android:id="@+id/jobPostButton"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:text="Post Job"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:backgroundTint="#e4e278"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobDateButton" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="89dp"
        android:layout_height="43dp"
        android:layout_marginTop="3dp"
        android:text="Back"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="#346e2c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>